@@ -13,6 +13,9 @@ Format:
 ==================
 
 
+2013-02-21 (Brian Munkholm
+-+ Renamed Group::get_table_count() to Group::size()
+
 2013-02-19 (Kristian Spangsege)
 + Type of Group::BufferSpec::m_data changed from <char*> to <const char*>.
 
